@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class GSM {
name
email
password
}


class Entry{
    status

}

class Task{

}



'Platform "1" -- "*" Organization : has registered >
'Platform "1" -- "*" Category : defines >
GSM "1" -- "0..*" Task : have >
GSM "1" -- "0..*" Entry : Postpones >
Entry "1" -- "1" Task : extends

@enduml